aap-product-docs-plaintext/red_hat_content/documentation/red_hat_ansible_automation_platform/2.5/using_automation_execution/controller-playbook-run-jobs_jobs-in-controller.md
# 5. Jobs in automation controller
## 5.3. Playbook run jobs




When a playbook is executed, the results display in the **Output** tab. If used, the Ansible CLI displays the same information. This can be useful for debugging.

The events summary displays the following events that are run as part of this playbook:

- The number of times this playbook has run is shown in the **Plays** field
- The number of tasks associated with this playbook is shown in the **Tasks** field
- The number of hosts associated with this playbook is shown in the **Hosts** field
- The amount of time it took to complete the playbook run is shown in the **Elapsed** field


![Job events summary](https://access.redhat.com/webassets/avalon/d/Red_Hat_Ansible_Automation_Platform-2.5-Using_automation_execution-en-US/images/e5f98a447f71e931f4c828442326587e/ug-jobs-events-summary.png)


You canRelaunch job,Cancel job, download![Download](https://access.redhat.com/webassets/avalon/d/Red_Hat_Ansible_Automation_Platform-2.5-Using_automation_execution-en-US/images/8a61e20c21c53f44e207c84d454159ec/download.png)
the job output, or delete![Delete](https://access.redhat.com/webassets/avalon/d/Red_Hat_Ansible_Automation_Platform-2.5-Using_automation_execution-en-US/images/6cfc80c0460fa4d4d18be2d2f5df16fa/delete-button.png)
the job.

Hover over a section of the host status bar in the **Output** view and the number of hosts associated with that status displays.

The output for a playbook job is also available after launching a job from the **Jobs** tab of its **Jobs Templates** page. View its host details by clicking the line item tasks in the output.

